--- a/views/cursos.ejs
+++ b/views/cursos.ejs
@@ -1,115 +1,133 @@
 <div class="tabs-wrapper" id="tabsWrapper">
-    <div id="fundo-wrapper">
-      
-    </div>
-  
-    <ul role="tablist" class="tabs" arial-label="tabs-description" style="display: flex; justify-content: space-between;">
-      <li>
-        <button role="tab" aria-selected="true" aria-controls="tab-1">Benfica</button>      
+  <!--<div id="fundo-wrapper"></div> -->
+  <ul role="tablist" class="tabs" arial-label="tabs-description" id="listas-tab">
+
+    <li>
+      <button role="tab" aria-selected="true" aria-controls="tab-1">Benfica</button>      
+    </li>
+    
+    <li>
+      <button role="tab" aria-selected="false" aria-controls="tab-2">Labomar</button>      
+    </li>
+
+    <li>
+      <button role="tab" aria-selected="false" aria-controls="tab-3">Pici</button>      
+    </li>
+
+    <li>
+      <button role="tab" aria-selected="false" aria-controls="tab-4">Porangabuçu</button>      
+    </li>
+  </ul>
+
+  <div id="tabs-container">
+    <div tabindex="0" role="tabpanel" id="tab-1" aria-labelledby="tab-1" tabindex="0">
+      <div class="title-campus">
+        <img src="images/Header-Benfica.png" style="margin: 0; width: 100vw; height: auto;">
+        <h3 style="margin-top: -12%;">Campus do Benfica</h3>
+        <div class="linha"></div>
+      </div>
+      <ul class="nav-cursos">
+        <li>
+          <div class="curso-nome">
+           <img src="images/icons/cursos_icon.png" style="" alt="">
+           <div class="curso-div">
+            <h5>  Administração </h5>
+            <h6>  Bacharelado   </h6>
+          </div>
+        </div>
       </li>
-      
       <li>
-        <button role="tab" aria-selected="false" aria-controls="tab-2">Labomar</button>      
-      </li>
-  
-      <li>
-        <button role="tab" aria-selected="false" aria-controls="tab-3">Pici</button>      
-      </li>
-  
-      <li>
-        <button role="tab" aria-selected="false" aria-controls="tab-4">Porangabuçu</button>      
+        <div class="curso-nome">
+          <img src="images/icons/cursos_icon.png">
+          <div class="curso-div">
+            <h5>  Biblioteconomia </h5>
+            <h6>  Bacharelado     </h6>
+          </div>
+        </div>
       </li>
     </ul>
-  
-  <div>
-    <div tabindex="0" role="tabpanel" id="tab-1" aria-labelledby="tab-1" tabindex="0">
-          <ul class="nav-cursos">
-              <li>
-                <div class="curso-nome">
-                   <img src="/images/icons/cursos_icon.png" style="" alt="">
-                  <div class="curso-div">
-                    <h5>  Administração </h5>
-                    <h6>  Bacharelado   </h6>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="curso-nome">
-                  <img src="/images/icons/cursos_icon.png">
-                  <div class="curso-div">
-                    <h5>  Biblioteconomia </h5>
-                    <h6>  Bacharelado     </h6>
-                  </div>
-                </div>
-              </li>
-            </ul>
-        </div>
-        <div tabindex="0" role="tabpanel" id="tab-2" aria-labelledby="tab-2" tabindex="0" hidden="">
-            <ul class="nav-cursos">
-              <li>
-                <div class="curso-nome">
-                   <img src="/images/icons/cursos_icon.png" style="" alt="">
-                  <div class="curso-div">
-                    <h5>  Ciências Ambientais </h5>
-                    <h6>  Bacharelado         </h6>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="curso-nome">
-                  <img src="/images/icons/cursos_icon.png">
-                  <div class="curso-div">
-                    <h5>  Oceanografia    </h5>
-                    <h6>  Bacharelado     </h6>
-                  </div>
-                </div>
-              </li>
-            </ul>
-        </div>
-        <div tabindex="0" role="tabpanel" id="tab-3" aria-labelledby="tab-3" tabindex="0" hidden="">        
-         <ul class="nav-cursos">
-              <li>
-                <div class="curso-nome">
-                   <img src="/images/icons/cursos_icon.png" style="" alt="">
-                  <div class="curso-div" onclick="location.href='/index_smd';">
-                    <h5>  Sistemas e Mídias Digitais </h5>
-                    <h6>  Bacharelado                </h6>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="curso-nome">
-                  <img src="/images/icons/cursos_icon.png">
-                  <div class="curso-div">
-                    <h5>  Zootecnia   </h5>
-                    <h6>  Bacharelado </h6>
-                  </div>
-                </div>
-              </li>
-            </ul>
-        </div>
-        <div tabindex="0" role="tabpanel" id="tab-4" aria-labelledby="tab-4" tabindex="0" hidden="">        
-          <ul class="nav-cursos">
-              <li>
-                <div class="curso-nome">
-                   <img src="/images/icons/cursos_icon.png" style="" alt="">
-                  <div class="curso-div">
-                    <h5>  Farmácia     </h5>
-                    <h6>  Bacharelado  </h6>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="curso-nome">
-                  <img src="/images/icons/cursos_icon.png">
-                  <div class="curso-div">
-                    <h5>  Medicina    </h5>
-                    <h6>  Bacharelado </h6>
-                  </div>
-                </div>
-              </li>
-            </ul>     
-        </div> 
-      </div>
   </div>
-    <div id="pageNavOverlay"></div> 
+  <div tabindex="0" role="tabpanel" id="tab-2" aria-labelledby="tab-2" tabindex="0" hidden="">
+    <div class="title-campus">
+      <img src="images/Header-Labomar.png">
+      <h3>Campus do Labomar</h3>
+      <div class="linha"></div>
+    </div>          
+    <ul class="nav-cursos">
+      <li>
+        <div class="curso-nome">
+         <img src="images/icons/cursos_icon.png" style="" alt="">
+         <div class="curso-div">
+          <h5>  Ciências Ambientais </h5>
+          <h6>  Bacharelado         </h6>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="curso-nome">
+        <img src="images/icons/cursos_icon.png">
+        <div class="curso-div">
+          <h5>  Oceanografia    </h5>
+          <h6>  Bacharelado     </h6>
+        </div>
+      </div>
+    </li>
+  </ul>
+</div>
+<div tabindex="0" role="tabpanel" id="tab-3" aria-labelledby="tab-3" tabindex="0" hidden="">        
+  <div class="title-campus">
+    <img src="images/Header-Pici.png">
+    <h3>Campus do Pici</h3>
+    <div class="linha"></div>
+  </div>       
+  <ul class="nav-cursos">
+    <li>
+      <div class="curso-nome">
+       <img src="images/icons/cursos_icon.png" style="" alt="">
+       <div class="curso-div" onclick="location.href='index_smd';">
+        <h5>  Sistemas e Mídias Digitais </h5>
+        <h6>  Bacharelado                </h6>
+      </div>
+    </div>
+  </li>
+  <li>
+    <div class="curso-nome">
+      <img src="images/icons/cursos_icon.png">
+      <div class="curso-div">
+        <h5>  Zootecnia   </h5>
+        <h6>  Bacharelado </h6>
+      </div>
+    </div>
+  </li>
+</ul>
+</div>
+<div tabindex="0" role="tabpanel" id="tab-4" aria-labelledby="tab-4" tabindex="0" hidden="">        
+<div class="title-campus">
+  <img src="images/Header-Porangabuçu.png">
+  <h3>Campus do Porangabuçu</h3>
+  <div class="linha"></div>
+</div>        
+<ul class="nav-cursos">
+  <li>
+    <div class="curso-nome">
+     <img src="images/icons/cursos_icon.png" style="" alt="">
+     <div class="curso-div">
+      <h5>  Farmácia     </h5>
+      <h6>  Bacharelado  </h6>
+    </div>
+  </div>
+</li>
+<li>
+  <div class="curso-nome">
+    <img src="images/icons/cursos_icon.png">
+    <div class="curso-div">
+      <h5>  Medicina    </h5>
+      <h6>  Bacharelado </h6>
+    </div>
+  </div>
+</li>
+</ul>     
+</div> 
+</div>
+</div>
+<div id="pageNavOverlay"></div> 
