--- a/views/partials/menu_visitante.ejs
+++ b/views/partials/menu_visitante.ejs
@@ -1,38 +1,38 @@
 <div class="page-wrapper">
-    <header class="page-header" role="banner">
-      <div id = "pageNav">      
-        <div class="page-nav" id="navOne">
-          <nav role="navigation">          
-            <div id="profile-header">
-              <span id="profile-circle"></span>
-              <div>
-                <h4>Olá, visitante!</h4>
-                <a id="btn_login" href="/aluno/login">
-                  Login
-                </a>    
-                <a id="btn_cadastro" href="/aluno/register">
-                 Cadastro
-               </a>      
-             </div>            
-           </div>
-  
-           <ul class="nav-primary">
-            <li>
-              <a href="/index">
-                <img src="/images/icons/home.png"class="icones">
-                Início
-              </a>
-            </li>
-            
-            <li>
-              <a href="/cursos">
-                <img src="/images/icons/cursos.png"class="icones">
-                Cursos
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+  <header class="page-header" role="banner">
+    <div id = "pageNav">      
+      <div class="page-nav" id="navOne">
+        <nav role="navigation">          
+          <div id="profile-header">
+            <span id="profile-circle"></span>
+            <div>
+              <h4>Olá, visitante!</h4>
+              <a id="btn_login" href="/aluno/login">
+                Login
+              </a>    
+              <a id="btn_cadastro" href="/aluno/register">
+               Cadastro
+             </a>      
+           </div>            
+         </div>
+
+         <ul class="nav-primary">
+          <li>
+            <a href="/">
+              <img src="/images/icons/home.png" class="icones">
+              Início
+            </a>
+          </li>
+          
+          <li>
+            <a href="/cursos">
+              <img src="/images/icons/cursos.png" class="icones">
+              Cursos
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
-  </header>
-  </div> 
+  </div>
+</header>
+</div> 
