--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -3,7 +3,12 @@
     Professores Favoritos
   </h4>
   <div class="linha"></div>
-  <div id="carousel">
+  <div id="carousel" style="<%= (favoritos.length != 0)? 'height: 180px': '' %>; margin-bottom: 20px;">
+    <% if (favoritos.length == 0) {%>
+      <p>
+        Nenhum docente favoritado ainda.
+      </p>
+      <% } %>
     <% favoritos.forEach( (docente) => { %>
     <%- include('./partials/card_favorito.ejs', {docente}) %>
     <% }); %>
@@ -11,25 +16,44 @@
 
   <h4>Minhas Solicitações</h4>
   <div class="linha"></div>
+  <% if (solicitacoes.length == 0) {%>
+    <div style="margin-left: 6.7vw;">
+      <p>
+        Nenhuma solicitação realizada.
+      </p>
+    </div>
+  <% } %>
   <% solicitacoes.forEach( (data) => { %>
-  <%- include('./partials/solicitacao.ejs', {solicitacao:data.solicitacao, docente: data.docente}) %>
+    <%- include('./partials/solicitacao.ejs', {solicitacao:data.solicitacao, docente: data.docente}) %>
   <% }); %>
 <% } else { %>
 <h4 style="margin-top: 25vh;">
     <h4>Minhas Solicitações</h4>
     <div class="linha"></div>
+    <% if (solicitacoes.length == 0) {%>
+      <div style="margin-left: 6.7vw;">
+        <p>
+          Nenhuma solicitação realizada.
+        </p>
+      </div>
+    <% } %>
     <% solicitacoes.forEach( (data) => { %>
-    <%- include('./partials/solicitacao.ejs', {solicitacao:data.solicitacao, docente: data.docente}) %>
+      <%- include('./partials/solicitacao.ejs', {solicitacao:data.solicitacao, docente: data.docente}) %>
     <% }); %>
-  <h4 style="margin-top: 10vh;">
+  <h4 style="margin-top: 20px;">
     Professores Favoritos
   </h4>
   <div class="linha"></div>
-  <div id="carousel">
-    <% favoritos.forEach( (docente) => { %>
-    <%- include('./partials/card_favorito.ejs', {docente}) %>
-    <% }); %>
-</div>
+  <div id="carousel" style="<%= (favoritos.length != 0)? 'height: 180px': '' %>; margin-bottom: 20px;">
+      <% if (favoritos.length == 0) {%>
+        <p>
+          Nenhum docente favoritado ainda.
+        </p>
+        <% } %>
+      <% favoritos.forEach( (docente) => { %>
+      <%- include('./partials/card_favorito.ejs', {docente}) %>
+      <% }); %>
+    </div>
 
 <% } %>
 <div id="pageNavOverlay"></div>
