--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,18 +3,20 @@
   <h2>Conectando você a oportunidades acadêmicas.</h2>
 </div>
 
-<h2>Consulte</h2>
+<h2 style="margin-bottom: 0.5vh; margin-top: 5vh;">Consulte</h2>
 <div class="linha"></div>
+
 <img class="img_home" src="/images/foto-consulte.png">
 <p>Saiba mais sobre os cursos de graduação da UFC e os tipos de trabalho de conclusão de curso.</p>
 <button type="button" class="btn_home", onclick= "location.href='/cursos';">Ver cursos</button>
 
-<h2>Explore</h2>
+<h2 style="margin-bottom: 0.5vh; margin-top: 1vh;">Explore</h2>
 <div class="linha"></div>
+
 <img class="img_home" src="/images/foto-explore.png">
-
 <p>Pesquise, acompanhe e conecte-se com os docentes que mais estão alinhados à sua área de interesse.</p>
-
-<button type="button" class="btn_home" onclick="location.href='/aluno/login';">Conecte-se já</button>
+<% if (typeof user === 'undefined') {%>
+  <button type="button" class="btn_home" onclick="location.href='/aluno/register';">Explorar</button>
+<% } %>
 
 <div id="pageNavOverlay"></div> 
