--- a/views/notificacoes.ejs
+++ b/views/notificacoes.ejs
@@ -1,11 +1,11 @@
 <ul class="lista-notifica">
     <% notificacoes.forEach( notificacao => { %>
-    <div style="border-bottom: solid; border-width: 2px; border-color: #F5F5F5;">
+    <div class="notificacao_card">
         <li>
+            <img src="/images/icons/solicitacao.png" class="icon-notifica">
             <a>
                 <%= notificacao.texto %>
             </a>
-            <img src="/images/icons/solicitacao.png" class="icon-notifica">
         </li>
     </div>
     <% }) %>
