--- a/views/partials/menu_logado.ejs
+++ b/views/partials/menu_logado.ejs
@@ -3,10 +3,10 @@
     <div id="pageNav">
       <div class="page-nav" id="navOne">
         <nav role="navigation">
-          <div id="profile-header">
-            <img src="/images/profile-photo.jpg" id="profile-photo">
+          <div id="profile-header" style="padding-bottom: 25vh;">
+            <img src="/images/profile-photo.png" id="profile-photo">
             <div>
-              <h4>Olá, <%= user.name %></h4>
+              <h4>Olá, <%= user.name.split(' ')[0] %></h4>
               <a href="/aluno/perfil/perfil">
                 <img src="/images/icons/ver perfil.png" id="ver_perfil">
               </a>
