--- a/views/partials/solicitacao.ejs
+++ b/views/partials/solicitacao.ejs
@@ -1,14 +1,3 @@
-<!-- <a>
-    <img src="/images/icons/solicitacao.png">
-    <% if (!solicitacao.respondido) { %>
-    <%= docente.nome %>: <span style="font-weight: bold">Pendente</span>
-    <% } else if (solicitacao.aceito) { %>
-    <%= docente.nome %>: <span style="font-weight: bold">Aceita</span>
-    <% } else { %>
-    <%= docente.nome %>: <span style="font-weight: bold">Recusada</span>
-    <% } %>
-</a> -->
-
 <div id="solicit-perfil" class="lista_tcc">
     <div class="subtitle">
         <img src="/images/icons/solicitacao.png" class="btn_solicita">
@@ -16,11 +5,15 @@
         <img class="arrow_down" src="/images/icons/arrow-down.png">
     </div>
     <div class="content">
-        <p>
+        <h5> Você: </h5>
+        <p style="margin-left: 40px; margin-top: 0px; margin-bottom: 10px;">
             <%= solicitacao.mensagem %>
         </p>
-        <p>
+        <% if (solicitacao.respondido) { %>
+        <h5> Resposta: </h5>
+        <p style="margin-left: 40px; margin-top: 0px;">
             <%= solicitacao.resposta %>
         </p>
+        <% } %>
     </div>
 </div>
